# qtpaint

./: .gitignore  CMakeLists.txt
forms/: colorpanel.ui  layerpanel.ui  layerpanelitem.ui  mainwindow.ui  rightsidepanel.ui
include/: canvas.h  canvasviewport.h  canvaswidget.h  colorpanel.h  colorselector.h  command.h  hsvcolorselector.h  layer.h  layerimage.h  layerpanel.h  layerpanelitem.h  mainwindow.h  normalmapcolorselector.h  paintcommand.h  paintimage.h  paintinfo.h  paintlayercommand.h  pentool.h  rightsidepanel.h  sessionmanager.h  stroke.h  strokecommand.h  tool.h  viewport.h
resource/style/: layerpanel.qss  main.qss  stylesheets.qrc
src/: canvas.cpp  canvasviewport.cpp  canvaswidget.cpp  colorpanel.cpp  colorselector.cpp  hsvcolorselector.cpp  layer.cpp  layerimage.cpp  layerpanel.cpp  layerpanelitem.cpp  main.cpp  mainwindow.cpp  normalmapcolorselector.cpp  paintimage.cpp  paintinfo.cpp  paintlayercommand.cpp  pentool.cpp  rightsidepanel.cpp  sessionmanager.cpp  stroke.cpp  strokecommand.cpp  viewport.cpp
